2017-06-22  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_signature.c (nasl_verify_signature): Adjust to handle
	case where the signature could not be parsed correctly. Initialize
	variables.

2017-06-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl_builtin_nmap.c (dbg_display_cmdline, xmltag_open_hop): Put
	single 'dbg ()' calls in conditional branches into blocks for
	consistency as they expand to nothing when NDEBUG is defined.

2017-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/CMakeLists.txt: Install GVM_LOG_DIR instead of
	OPENVAS_LOG_DIR.

2017-06-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/nasl_signature.c (examine_signatures): Add argument.
	Remove while loop because analyze only one signature.
	Remove not needed variables. Update documentation.
	(nasl_verify_signature): Add variables. Load file contents into
	buffers. Use gpgme_data_new_from_mem() instead of
	gpgme_data_new_from_file(). Search manually the signature inside the
	file. Update documentation.

2017-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Switch the log location from /var/log/openvas/ to /var/log/gvm/.

	* CMakeLists.txt: Set location for GVM_LOG_DIR (replaces
	OPENVAS_LOG_DIR) accordingly.

	* INSTALL: Adjust the documentation accordingly.

	* src/CMakeLists.txt: Removed OPENVAS_LOG_DIR because
	this variable is not needed anymore anywhere in the code.

	* src/openvassd_log_conf.cmake_in: Use GVM_LOG_DIR instead of
	OPENVAS_LOG_DIR.

2017-06-21  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_connect): Update documentation.

	* nasl/nasl_init.c (libfuncs): Update args for ssh_connect and
	ssh_userauth.

2017-06-19  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_smb.c (nasl_win_cmd_exec): Adjust to handle case where
	response is in unicode.

2017-06-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* misc/network.c (host_info_init): Set vhosts element.